syntax = "proto3";

package user;

service UserService {
    rpc GetUserDetails (UserDetailRequest) returns (UserDetailResponse) {}
}

message UserDetailRequest {
    string id = 1;
}

message UserDetailResponse {
    User user = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}